; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_create_dummy_window.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_create_dummy_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_platform = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@DUMMY_WNDCLASS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"OpenGL Dummy Window\00", align 1
@WS_POPUP = common dso_local global i32 0, align 4
@LOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"Failed to create dummy GL window, %lu\00", align 1
@.str.2 = private unnamed_addr constant [39 x i8] c"Failed to get dummy GL window DC (%lu)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gl_platform*)* @create_dummy_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_dummy_window(%struct.gl_platform* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gl_platform*, align 8
  store %struct.gl_platform* %0, %struct.gl_platform** %3, align 8
  %4 = load i32, i32* @DUMMY_WNDCLASS, align 4
  %5 = load i32, i32* @WS_POPUP, align 4
  %6 = call i32 @GetModuleHandleW(i32* null)
  %7 = call i32 @CreateWindowExA(i32 0, i32 %4, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %5, i32 0, i32 0, i32 1, i32 1, i32* null, i32* null, i32 %6, i32* null)
  %8 = load %struct.gl_platform*, %struct.gl_platform** %3, align 8
  %9 = getelementptr inbounds %struct.gl_platform, %struct.gl_platform* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i32 %7, i32* %10, align 4
  %11 = load %struct.gl_platform*, %struct.gl_platform** %3, align 8
  %12 = getelementptr inbounds %struct.gl_platform, %struct.gl_platform* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %1
  %17 = load i32, i32* @LOG_ERROR, align 4
  %18 = call i32 (...) @GetLastError()
  %19 = call i32 @blog(i32 %17, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i32 %18)
  store i32 0, i32* %2, align 4
  br label %39

20:                                               ; preds = %1
  %21 = load %struct.gl_platform*, %struct.gl_platform** %3, align 8
  %22 = getelementptr inbounds %struct.gl_platform, %struct.gl_platform* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @GetDC(i32 %24)
  %26 = load %struct.gl_platform*, %struct.gl_platform** %3, align 8
  %27 = getelementptr inbounds %struct.gl_platform, %struct.gl_platform* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 %25, i32* %28, align 4
  %29 = load %struct.gl_platform*, %struct.gl_platform** %3, align 8
  %30 = getelementptr inbounds %struct.gl_platform, %struct.gl_platform* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %38, label %34

34:                                               ; preds = %20
  %35 = load i32, i32* @LOG_ERROR, align 4
  %36 = call i32 (...) @GetLastError()
  %37 = call i32 @blog(i32 %35, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.2, i64 0, i64 0), i32 %36)
  store i32 0, i32* %2, align 4
  br label %39

38:                                               ; preds = %20
  store i32 1, i32* %2, align 4
  br label %39

39:                                               ; preds = %38, %34, %16
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @CreateWindowExA(i32, i32, i8*, i32, i32, i32, i32, i32, i32*, i32*, i32, i32*) #1

declare dso_local i32 @GetModuleHandleW(i32*) #1

declare dso_local i32 @blog(i32, i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @GetDC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
